@@ -7,6 +7,8 @@
 	legacy (pre 1.2) repositories
 	* lib/rubygems/commands/sources_command.rb:  Backwards compatibility
 	and restoration of --update.
+	* lib/rubygems/specification.rb:  Ensure nil-typed dependencies become
+	runtime dependencies.
 
 2008-05-27  Eric Hodel  <drbrain@segment7.net>
 
@@ -3817,7 +3819,7 @@ Tue Dec  6 14:51:13 2005  Jim Weirich  <jim@tardis>
 2004-04-02 07:48  chadfowler
 
 	* lib/rubygems/remote_installer.rb: Prompt for installation of
-	  dependenciees.
+	  dependencies.
 
 	  For now, there is a puts/gets in the middle of
 	  remote_installer.rb  This should probably be cleaned up later
